force-app/main/default/objects/User/fields/Job_Title_Prop__c.field-meta.xml
<CustomField>
    <fullName>Job_Title_Prop__c</fullName>
    <label>Job Title</label>
    <length>100</length>
    <type>Text</type>
</CustomField>