force-app/main/default/objects/User/fields/Onboarding_Permission_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Onboarding_Permission_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Account Created</label>
    <type>Checkbox</type>
</CustomField>