force-app/main/default/objects/User/fields/PropelusId__c.field-meta.xml
<CustomField>
    <fullName>PropelusId__c</fullName>
    <label>PropelusID</label>
    <length>100</length>
    <type>Text</type>
</CustomField>